--- a/Algorithm/build.gradle
+++ b/Algorithm/build.gradle
@@ -19,4 +19,6 @@ repositories {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.fasterxml.jackson.core:jackson-databind:2.2.+'
+    compile 'nz.ac.waikato.cms.weka:weka-dev:3.7.12'
+    compile project(':DataExtraction')
 }
