--- a/DataExtraction/build.gradle
+++ b/DataExtraction/build.gradle
@@ -18,7 +18,7 @@ repositories {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'org.xerial:sqlite-jdbc:3.7.+'
+    compile 'org.xerial:sqlite-jdbc:3.7.2'
     compile 'org.twitter4j:twitter4j-core:4.0.+'
     compile 'com.fasterxml.jackson.core:jackson-databind:2.2.+'
 }
