Added some fake screen names and changed config for it. Also removed extra database cause all information contains in sample.db.

--- a/res/ru/config.json
+++ b/res/ru/config.json
@@ -3,6 +3,15 @@
   "databasePath": "res/ru/sample.db",
   "types": [
     {
+      "id": -1,
+      "name": "fake",
+      "tweetPerUser": 500,
+      "constraints": false,
+      "data": {
+        "peopleNames": "res/ru/screen_names_-1"
+      }
+    },
+    {
       "id": 0,
       "name": "personal",
       "tweetPerUser": 150,
