--- a/Entity/build.gradle
+++ b/Entity/build.gradle
@@ -7,4 +7,5 @@ repositories {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.fasterxml.jackson.core:jackson-databind:2.5.1'
+    compile 'org.languagetool:language-ru:2.9'
 }
