--- a/Algorithm/build.gradle
+++ b/Algorithm/build.gradle
@@ -7,8 +7,16 @@ repositories {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.fasterxml.jackson.core:jackson-databind:2.2.+'
+    compile 'org.reflections:reflections:0.9.9'
+
     compile 'nz.ac.waikato.cms.weka:weka-dev:3.7.12'
     compile 'nz.ac.waikato.cms.weka:LibSVM:1.0.4'
-    compile 'org.reflections:reflections:0.9.9'
+    compile 'nz.ac.waikato.cms.weka:attributeSelectionSearchMethods:1.0.7'
+    compile 'nz.ac.waikato.cms.weka:consistencySubsetEval:1.0.4'
+    compile 'nz.ac.waikato.cms.weka:fastCorrBasedFS:1.0.2'
+    compile 'nz.ac.waikato.cms.weka:linearForwardSelection:1.0.2'
+    compile 'nz.ac.waikato.cms.weka:probabilisticSignificanceAE:1.0.2'
+    compile 'nz.ac.waikato.cms.weka:tabuAndScatterSearch:1.0.2'
+
     compile project(':DataExtraction')
 }
