--- a/Algorithm/build.gradle
+++ b/Algorithm/build.gradle
@@ -8,6 +8,8 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.fasterxml.jackson.core:jackson-databind:2.2.+'
     compile 'org.reflections:reflections:0.9.9'
+    compile 'org.apache.poi:poi-ooxml:3.9'
+    compile 'org.apache.poi:poi:3.9'
 
     compile 'nz.ac.waikato.cms.weka:weka-dev:3.7.12'
     compile 'nz.ac.waikato.cms.weka:LibSVM:1.0.4'
