Added fss table generator class (to auto generate word table for bachelor note).

--- a/WordGenerator/build.gradle
+++ b/WordGenerator/build.gradle
@@ -12,5 +12,5 @@ dependencies {
     compile 'org.apache.poi:poi-ooxml:3.9'
     compile 'org.apache.poi:poi:3.9'
 
-    compile project(':DataExtraction')
+    compile project(':Algorithm')
 }
