--- a/Entity/build.gradle
+++ b/Entity/build.gradle
@@ -8,6 +8,10 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.fasterxml.jackson.core:jackson-databind:2.5.1'
     compile 'org.languagetool:language-ru:2.9'
+    compile 'org.languagetool:language-en:2.9'
     compile 'org.xerial:sqlite-jdbc:3.7.2'
     compile 'org.twitter4j:twitter4j-core:4.0.+'
+    compile 'org.apache.opennlp:opennlp-tools:1.5.3'
+    compile 'org.apache.opennlp:opennlp-uima:1.5.3'
+    compile 'org.apache.opennlp:opennlp-maxent:3.0.3'
 }
