--- a/Entity/build.gradle
+++ b/Entity/build.gradle
@@ -6,6 +6,7 @@ repositories {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile 'nz.ac.waikato.cms.weka:weka-dev:3.7.12'
     compile 'com.fasterxml.jackson.core:jackson-databind:2.5.1'
     compile 'org.languagetool:language-ru:2.9'
     compile 'org.languagetool:language-en:2.9'
