refactoring #8 (attribute function again #3)

--- a/twitter_classifier.properties
+++ b/twitter_classifier.properties
@@ -3,3 +3,4 @@ frequency_analyzer=com.samborskiy.entity.analyzers.frequency.FrequencyDictionary
 grammar_analyzer=com.samborskiy.entity.analyzers.grammar.GrammarAnalyzer
 morphological_analyzer=com.samborskiy.entity.analyzers.morphological.MorphologicalAnalyzer
 sentence_analyzer=com.samborskiy.entity.analyzers.sentence.TweetParser
+attributes=res/random_forest_attributes
