--- a/DataExtraction/build.gradle
+++ b/DataExtraction/build.gradle
@@ -7,4 +7,13 @@ repositories {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile project(':Entity')
+    compile 'nz.ac.waikato.cms.weka:weka-dev:3.7.12'
+    compile 'com.fasterxml.jackson.core:jackson-databind:2.5.1'
+    compile 'org.languagetool:language-ru:2.9'
+    compile 'org.languagetool:language-en:2.9'
+    compile 'org.xerial:sqlite-jdbc:3.7.2'
+    compile 'org.twitter4j:twitter4j-core:4.0.+'
+    compile 'org.apache.opennlp:opennlp-tools:1.5.3'
+    compile 'org.apache.opennlp:opennlp-uima:1.5.3'
+    compile 'org.apache.opennlp:opennlp-maxent:3.0.3'
 }
