--- a/twitter_classifier.properties
+++ b/twitter_classifier.properties
@@ -1,6 +1,6 @@
-debug=false
+debug=true
 frequency_analyzer=com.samborskiy.entity.analyzers.frequency.FrequencyDictionary
-grammar_analyzer=com.samborskiy.entity.analyzers.grammar.GrammarAnalyzer
-morphological_analyzer=com.samborskiy.entity.analyzers.morphological.MorphologicalAnalyzer
-sentence_analyzer=com.samborskiy.entity.analyzers.sentence.TweetParser
+grammar_analyzer=com.samborskiy.entity.analyzers.grammar.JLanguageToolGrammarCheckerRu
+morphological_analyzer=com.samborskiy.entity.analyzers.morphological.SimpleMorphologicalAnalyzer
+sentence_analyzer=com.samborskiy.entity.analyzers.sentence.SimpleTweetParser
 attributes=res/random_forest_attributes
