--- a/Demo/build.gradle
+++ b/Demo/build.gradle
@@ -1,8 +1,11 @@
 apply plugin: 'java'
+apply plugin: 'application'
 
 repositories {
     mavenCentral()
 }
+
+mainClassName = "com.samborskiy.demo.Download"
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
